# Individual_Simulation_Platform

./: README.md  app.py
.streamlit_uploads/: intervention_designer_1772639930.csv  intervention_designer_1772640976.csv
backend/: .env  __init__.py  app.py  config.py  requirements.txt  simulator.py  storage.py
backend/interview/: README.md  Time_management_questionnaire.jsonl  USAGE.md  build_benchmark.py  claude_desktop_config.sample.json  config.py  config.sample.json  event_library.py  event_probabilities.json  mcp.json  paths.py  prepare_benchmark_sources.py  project_config.local.json  requirements.txt  run_all_benchmarks.py  run_benchmark.py  server.py  summarize_outputs.py  toolkit.py
backend/lifesim/: fastmcp_server.py
backend/marketing/: README.md  mcp_server.py  my_client.py  online_sim.py
backend/urban_sim/: __init__.py  agent.py  config.py  router.py  simulation.py  tool.py  (+1 more)
code_plan/: home_view_plan.md  online_sim_refactor_plan.md  online_sim_view_plan.md  setup_view_plan.md  simulation_view_plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
marketing_simulation/: mcp_server.py  skill.md  streamlit_app.py
marketing_simulation/oasis/: pyproject.toml
marketing_simulation/oasis/oasis.egg-info/: SOURCES.txt  requires.txt
marketing_simulation/oasis/social_agent/: agent_attitude.py  agent_environment.py
marketing_simulation/oasis/social_platform/: platform.py
marketing_simulation/oasis/social_platform/schema/: log_attitude_average.sql
templates/: coming_soon.html  curp_entry.html  home.html  lifesim_entry.html
(+355 files in other folders)
